1.4.22.dev0
 * In "borgmatic --help", don't expand $HOME in listing of default "--config" paths.

1.4.21
 * #268: Override particular configuration options from the command-line via "--override" flag. See
   the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#configuration-overrides
 * #270: Only trigger "on_error" hooks and monitoring failures for "prune", "create", and "check"
   actions, and not for other actions.
 * When pruning with verbosity level 1, list pruned and kept archives. Previously, this information
   was only shown at verbosity level 2.

1.4.20
 * Fix repository probing during "borgmatic init" to respect verbosity flag and remote_path option.
 * #249: Update Healthchecks/Cronitor/Cronhub monitoring integrations to fire for "check" and
   "prune" actions, not just "create".

1.4.19
 * #259: Optionally change the internal database dump path via "borgmatic_source_directory" option
   in location configuration section.
 * #271: Support piping "borgmatic list" output to grep by logging certain log levels to console
   stdout and others to stderr.
 * Retain colored output when piping or redirecting in an interactive terminal.
 * Add end-to-end tests for database dump and restore. These are run on developer machines with
   Docker Compose for approximate parity with continuous integration tests.

1.4.18
 * Fix "--repository" flag to accept relative paths.
 * Fix "borgmatic umount" so it only runs Borg once instead of once per repository / configuration
   file.
 * #253: Mount whole repositories via "borgmatic mount" without any "--archive" flag.
 * #269: Filter listed paths via "borgmatic list --path" flag.

1.4.17
 * #235: Pass extra options directly to particular Borg commands, handy for Borg options that
   borgmatic does not yet support natively. Use "extra_borg_options" in the storage configuration
   section.